# EGL

./: CMakeLists.txt
EGL/: EGL_config.h  egl_wrapper.c
EGL/drivers/dri2/: egl_dri2.c  egl_dri2.h  platform_x11.c
EGL/include/EGL/: egl.h  eglext.h
EGL/include/c11/: threads.h
EGL/main/: eglapi.c  eglapi.h  eglarray.c  eglconfig.c  eglconfig.h  eglcontext.c  eglcurrent.c  eglcurrent.h  egldisplay.c  egldisplay.h  egldriver.c  egldriver.h  eglfallbacks.c  eglglobals.h  egllog.c  eglsurface.c  eglsync.c
